--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
-  <nav>
-    <a href="index.php">Home</a>
+<header>
+
+  <div class="nav">
+    <p>Zhiqi (Jackie) Chen</p>
+  </div>
+  <div class="nav">
+    <a href="index.html">Home</a>
     <a href="#">Personal Projects</a>
     <a href="#">Contact</a>
-  </nav>
+  </div>
+
+</header>
+
 
   <body>
 
