added about me and footer to every document

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <p>Zhiqi (Jackie) Chen</p>
   </div>
   <div class="nav">
+    <a href="contact.html">Contact</a>
+    <a href="projects.html">Personal Projects</a>
     <a href="index.html">Home</a>
-    <a href="#">Personal Projects</a>
-    <a href="#">Contact</a>
   </div>
 
 </header>
@@ -23,7 +23,14 @@
 
   <body>
     <div class="container">
-      
+      <div id="image">
+
+      </div>
+      <div class="aboutMe">
+        <h2>About Me</h2>
+        <p class="text">I am a computer science student at University of Toronot currently pursuing a
+        specialist degree in software engineering...</p>
+      </div>
 
 
 
@@ -32,4 +39,25 @@
 
     </div>
   </body>
+
+
+  <footer>
+    <div class="footerLinks">
+        <img src="css/email.png" alt="Email image">
+        <p>E-Mail:</p>
+        <a href="mailto:jackiechenzq@gmail.com">jackiechenzq@gmail.com</a>
+      </div>
+      <div class="footerLinks">
+        <img src="css/phone.png" alt="Phone image">
+        <p>Call:</p>
+        <p>289-707-6889</p>
+      </div>
+      <div class="footerLinks">
+        <img src="css/github.svg" alt="github image">
+        <p>GitHub</p>
+        <a href="https://github.com/ZhiqiChen">GitHub</a>
+      </div>
+      <br clear="all" />
+  </footer>
+
  </html>
