--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,22 @@
     <title>Contact Me</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
+  <header>
 
+    <div class="nav">
+      <p>Zhiqi (Jackie) Chen</p>
+    </div>
+    <div class="nav">
+      <a href="contact.html">Contact</a>
+      <a href="projects.html">Personal Projects</a>
+      <a href="index.html">Home</a>
+    </div>
+
+  </header>
 
   <body>
     <div class="container">
-      <div id="image">
 
-      </div>
       <div class="links">
         <a href="https://www.linkedin.com/in/zhiqi-jackie-chen-7537b3171/"> linkedin</a>
         <a href="jackiechenzq@gmail.com">E-Mail</a>
@@ -22,6 +31,25 @@
       </div>
     </div>
 
-    
+
   </body>
+  <footer>
+    <div class="footerLinks">
+        <img src="css/email.png" alt="Email image">
+        <p>E-Mail:</p>
+        <a href="mailto:jackiechenzq@gmail.com">jackiechenzq@gmail.com</a>
+      </div>
+      <div class="footerLinks">
+        <img src="css/phone.png" alt="Phone image">
+        <p>Call:</p>
+        <p>289-707-6889</p>
+      </div>
+      <div class="footerLinks">
+        <img src="css/github.svg" alt="github image">
+        <p>GitHub</p>
+        <a href="https://github.com/ZhiqiChen">GitHub</a>
+      </div>
+      <br clear="all" />
+  </footer>
+
 </html>
