Fixed some links

--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
     <div class="container">
 
       <div class="links">
-        <a href="https://www.linkedin.com/in/zhiqi-jackie-chen-7537b3171/"> linkedin</a>
-        <a href="jackiechenzq@gmail.com">E-Mail</a>
+        <a href="www.linkedin.com/in/zhiqi-chen"> linkedin</a>
+        <a href="jac.chen@mail.utoronto.ca">E-Mail</a>
       </div>
 
       <div class="links">
