Uploaded correct image, css and added text to index

--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@
 
   <body>
     <div class="container">
-      <div id="image">
-
+      <div >
+        <img src="css/me.jpg" alt="Error no image" id="image">
       </div>
       <div class="aboutMe">
         <h2>About Me</h2>
-        <p class="text">I am a computer science student at University of Toronot currently pursuing a
-        specialist degree in software engineering...</p>
+        <p class="text">
+        Hi, my name is Zhiqi but you can call me Jackie. I am a computer science student at the University of Toronto and currently pursuing a degree in software engineering.
+        Currently, I am interested in learning more about full-stack development and big data as paths to the future and development projects.
+         My strongest skills and experiences are within object-oriented languages (like over 3 years of experiences in java) but I have also finished projects for HTML and CSS like this website as well as backend languages like PHP and SQL in UTSC Daily Planner.
+        </p>
+        <p class="text"> Being a problem solver is within my nature, whether that is designing a robot for a competition, build and design woodworking projects or solving a coding problem I love a good challenge.
+          I love to learn and grow my skills further by challenging problems head-on. I hope that with my past experiences and skills that I can bring to the table that I will bring value to your development team.
+          </p>
+
       </div>
-
-
-
-
-
 
     </div>
   </body>
