--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,28 @@
   </header>
 
   <body>
+    <!-- <div class="">
+      <h3>UTSC Daily planner</h3>
+      <p></p>
+      <img src="" alt="">
+    </div> -->
+
+    <div class="">
+      <h3>UTSC Daily planner</h3>
+      <p>UTSC Daily planner is a personal project that I concieved of in an attempt to create a product that is useful to university students and to
+      learn more about full stack development.
+      This project's goal was to create a web application that has the following features:</p>
+      <ul>
+        <li>A login and signup system using email and password</li>
+        <li>a task list that has priority listing stored on the server</li>
+      </ul>
+      <h4> Things I have learnt:</h4>
+      <ul>
+        <li></li>
+      </ul>
+
+      <img src="" alt="">
+    </div>
 
   </body>
 
