added information to projects, deleted email from contact page

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <div class="container">
 
       <div class="links">
-        <a href="www.linkedin.com/in/zhiqi-chen"> linkedin</a>
+        <a href="https://www.linkedin.com/in/zhiqi-chen/"> linkedin</a>
         <a href="https://github.com/ZhiqiChen">GitHub</a>
       </div>
 
