--- a/projects.html
+++ b/projects.html
@@ -19,24 +19,35 @@
   </header>
 
   <body>
-    <!-- <div class="">
+    <!-- <div class="container">
       <h3>UTSC Daily planner</h3>
       <p></p>
+      <ul>
+        <li></li>
+      </ul>
+      <p>Things I have learnt</p>
+      <ul>
+        <li></li>
+      </ul>
       <img src="" alt="">
     </div> -->
 
-    <div class="">
+    <div class="container">
       <h3>UTSC Daily planner</h3>
       <p>UTSC Daily planner is a personal project that I concieved of in an attempt to create a product that is useful to university students and to
       learn more about full stack development.
       This project's goal was to create a web application that has the following features:</p>
       <ul>
         <li>A login and signup system using email and password</li>
-        <li>a task list that has priority listing stored on the server</li>
+        <li>A certain degree of security like encrypt password</li>
+        <li>A task list that has priority listing stored on the server</li>
       </ul>
       <h4> Things I have learnt:</h4>
       <ul>
-        <li></li>
+        <li>How to prevent sql injection</li>
+        <li>How to encrypt a password using bcrypt</li>
+        <li>How to use prepare statements instead of queries resulting in safer and faster queries</li>
+        <li>Better understanding of how a full stack development and its components work together</li>
       </ul>
 
       <img src="" alt="">
