--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="footerLinks">
         <img src="css/email.png" alt="Email image">
         <p>E-Mail:</p>
-        <a href="mailto:jackiechenzq@gmail.com">jackiechenzq@gmail.com</a>
+        <a href="mailto:jac.chen@mail.utoronto.ca">jac.chen@mail.utoronto.ca</a>
       </div>
       <div class="footerLinks">
         <img src="css/phone.png" alt="Phone image">
