added experiences and css

--- a/experiences.html
+++ b/experiences.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Contact Me</title>
+    <title>Projects</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <header>
@@ -13,7 +13,7 @@
     <div class="nav">
       <a href="contact.html">Contact</a>
       <a href="projects.html">Personal Projects</a>
-      <a href="experiences.html">Personal Projects</a>
+      <a href="experiences.html">Experiences</a>
       <a href="index.html">Home</a>
     </div>
 
@@ -21,19 +21,11 @@
 
   <body>
     <div class="container">
-
-      <div class="links">
-        <a href="https://www.linkedin.com/in/zhiqi-chen/"> linkedin</a>
-        <a href="https://github.com/ZhiqiChen">GitHub</a>
-      </div>
-
-      <div class="links">
-
-      </div>
+      <a href="experiences/PSPC.html">Procurement Canada</a>
     </div>
 
-
   </body>
+
   <footer>
     <div class="footerLinks">
         <img src="css/email.png" alt="Email image">
@@ -52,5 +44,4 @@
       </div>
       <br clear="all" />
   </footer>
-
 </html>
