--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
+  <header>
 
-<header>
+    <div class="nav">
+      <p>Zhiqi (Jackie) Chen</p>
+    </div>
+    <div class="nav">
+      <a href="contact.html">Contact</a>
+      <a href="projects.html">Personal Projects</a>
+      <a href="experiences.html">Experiences</a>
+      <a href="index.html">Home</a>
+    </div>
 
-  <div class="nav">
-    <p>Zhiqi (Jackie) Chen</p>
-  </div>
-  <div class="nav">
-    <a href="contact.html">Contact</a>
-    <a href="projects.html">Personal Projects</a>
-    <a href="index.html">Home</a>
-  </div>
-
-</header>
+  </header>
 
 
   <body>
