--- a/experiences/PSPC.html
+++ b/experiences/PSPC.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Projects</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/w3.css">
   </head>
   <header>
 
@@ -13,7 +14,6 @@
     <div class="nav">
       <a href="contact.html">Contact</a>
       <a href="projects.html">Personal Projects</a>
-      <a href="experiences.html">Experiences</a>
       <a href="index.html">Home</a>
     </div>
 
@@ -34,7 +34,24 @@
     </div> -->
 
     <div class="container">
-      <a href="projects/dailyPlanner.html">UTSC Daily Planner</a>
+      <h3>UTSC Daily planner</h3>
+      <p>UTSC Daily planner is a personal project that I concieved of in an attempt to create a product that is useful to university students and to
+      learn more about full stack development.
+      This project's goal was to create a web application that has the following features:</p>
+      <ul>
+        <li>A login and signup system using email and password</li>
+        <li>A certain degree of security like encrypt password</li>
+        <li>A task list that has priority listing stored on the server</li>
+      </ul>
+      <h4> Things I have learnt:</h4>
+      <ul>
+        <li>How to prevent sql injection</li>
+        <li>How to encrypt a password using bcrypt</li>
+        <li>How to use prepare statements instead of queries resulting in safer and faster queries</li>
+        <li>Better understanding of how a full stack development and its components work together</li>
+      </ul>
+
+      <img src="" alt="">
     </div>
 
   </body>
