some changes to pspc

--- a/experiences/PSPC.html
+++ b/experiences/PSPC.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Projects</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/w3.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/w3.css">
   </head>
   <header>
 
@@ -12,45 +12,31 @@
       <p>Zhiqi (Jackie) Chen</p>
     </div>
     <div class="nav">
-      <a href="contact.html">Contact</a>
-      <a href="projects.html">Personal Projects</a>
-      <a href="index.html">Home</a>
+      <a href="../contact.html">Contact</a>
+      <a href="../projects.html">Personal Projects</a>
+      <a href="../experiences.html">Personal Projects</a>
+      <a href="../index.html">Home</a>
     </div>
 
   </header>
 
   <body>
-    <!-- <div class="container">
-      <h3>UTSC Daily planner</h3>
-      <p></p>
-      <ul>
-        <li></li>
-      </ul>
-      <p>Things I have learnt</p>
-      <ul>
-        <li></li>
-      </ul>
-      <img src="" alt="">
-    </div> -->
-
     <div class="container">
-      <h3>UTSC Daily planner</h3>
-      <p>UTSC Daily planner is a personal project that I concieved of in an attempt to create a product that is useful to university students and to
-      learn more about full stack development.
-      This project's goal was to create a web application that has the following features:</p>
+      <h2>Procurement Canada: Web Developer</h3>
+      <h3>Skills:</h4>
       <ul>
-        <li>A login and signup system using email and password</li>
-        <li>A certain degree of security like encrypt password</li>
-        <li>A task list that has priority listing stored on the server</li>
+        <li>Communicated with teammate, tech-lead, and non-technical clients</li>
+        <li>Shown leadership skills by being a scrum master</li>
+        <li></li>
       </ul>
-      <h4> Things I have learnt:</h4>
       <ul>
-        <li>How to prevent sql injection</li>
-        <li>How to encrypt a password using bcrypt</li>
-        <li>How to use prepare statements instead of queries resulting in safer and faster queries</li>
-        <li>Better understanding of how a full stack development and its components work together</li>
+      <h3>Technologies:</h4>
+      <ul>
+        <li>Typescript</li>
+        <li>HTML + CSS</li>
+        <li>Joomla</li>
+        <li>Git</li>
       </ul>
-
       <img src="" alt="">
     </div>
 
@@ -58,17 +44,17 @@
 
   <footer>
     <div class="footerLinks">
-        <img src="css/email.png" alt="Email image">
+        <img src="../css/email.png" alt="Email image">
         <p>E-Mail:</p>
         <a href="mailto:jac.chen@mail.utoronto.ca">jac.chen@mail.utoronto.ca</a>
       </div>
       <div class="footerLinks">
-        <img src="css/phone.png" alt="Phone image">
+        <img src="../css/phone.png" alt="Phone image">
         <p>Call:</p>
         <p>289-707-6889</p>
       </div>
       <div class="footerLinks">
-        <img src="css/github.svg" alt="github image">
+        <img src="../css/github.svg" alt="github image">
         <p>GitHub</p>
         <a href="https://github.com/ZhiqiChen">GitHub</a>
       </div>
