--- a/projects/dailyPlanner.html
+++ b/projects/dailyPlanner.html
@@ -14,6 +14,7 @@
   <div class="nav">
     <a href="../contact.html">Contact</a>
     <a href="../projects.html">Personal Projects</a>
+    <a href="../experiences.html">Personal Projects</a>
     <a href="../index.html">Home</a>
   </div>
 
