deleted contact and added some info, fixed css

--- a/projects.html
+++ b/projects.html
@@ -3,23 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Projects</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="includes/css/w3.css">
   </head>
-  <header>
-
-    <div class="nav">
-      <p>Zhiqi (Jackie) Chen</p>
-    </div>
-    <div class="nav">
-      <a href="contact.html">Contact</a>
-      <a href="projects.html">Personal Projects</a>
-      <a href="experiences.html">Experiences</a>
-      <a href="index.html">Home</a>
-    </div>
-
-  </header>
 
   <body>
+    <header class="w3-top">
+
+      <div class="w3-bar w3-light-grey w3-card w3-text-dark-grey" style="padding-left: 50px; padding-right: 50px;">
+        <a class="w3-bar-item w3-padding-large w3-left w3-xlarge">Zhiqi (Jackie) Chen</a>
+        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right w3-xlarge" href="projects.html">Personal Projects</a>
+        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right w3-xlarge" href="experiences.html">Experiences</a>
+        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right w3-xlarge" href="index.html">Home</a>
+      </div>
+
+    </header>
     <!-- <div class="container">
       <h3>UTSC Daily planner</h3>
       <p></p>
@@ -32,29 +29,10 @@
       </ul>
       <img src="" alt="">
     </div> -->
-
-    <div class="container">
+    <div class="w3-content w3-padding-64 w3-center" style="max-width: 80%;">
       <a href="projects/dailyPlanner.html">UTSC Daily Planner</a>
     </div>
 
   </body>
 
-  <footer>
-    <div class="footerLinks">
-        <img src="css/email.png" alt="Email image">
-        <p>E-Mail:</p>
-        <a href="mailto:jac.chen@mail.utoronto.ca">jac.chen@mail.utoronto.ca</a>
-      </div>
-      <div class="footerLinks">
-        <img src="css/phone.png" alt="Phone image">
-        <p>Call:</p>
-        <p>289-707-6889</p>
-      </div>
-      <div class="footerLinks">
-        <img src="css/github.svg" alt="github image">
-        <p>GitHub</p>
-        <a href="https://github.com/ZhiqiChen">GitHub</a>
-      </div>
-      <br clear="all" />
-  </footer>
 </html>
